Sat Jul  9 17:24:41 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* NEWS: bigdecimal is not a builtin.

Sat Jul  9 17:17:53 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: some improvements for performance.

Sat Jul  9 16:56:01 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* atomic.h (ATOMIC_OR): _InterlockedOr is unavailable in VC6.

	* numeric.c (ULLONG_MAX): fallback definition.

Sat Jul  9 15:59:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_{read,write}): should be signed.
	  Bug #5001

Sat Jul  9 14:02:20 2011  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/core.rb: fix multipart form parsing bug. [Bug #3866]

Sat Jul  9 11:41:03 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Vector#normalize [ruby-dev:43829]

Sat Jul  9 09:25:06 2011  Eric Hodel  <drbrain@segment7.net>

	* enumerator.c:  Remove "enumeration sequenced by".
	  [Ruby 1.9 - Bug #4757]

Sat Jul  9 09:14:56 2011  Eric Hodel  <drbrain@segment7.net>

	* io.c:  Note that methods other than IO#gets may increase IO#lineno.
	  [Ruby 1.9 - Bug #4902]

Sat Jul  9 08:39:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RUN_OPT): disable gems.

Sat Jul  9 08:37:05 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_close): close(2) on a fd which is being read by
	  another thread causes deadlock on Mac OS X 10.5

Fri Jul  8 21:20:39 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: use USE_ELF instead of __ELF__ because Solaris
	  doesn't define it. USE_ELF is already provided by configure.
	  patched by Naohisa Goto. [ruby-dev:44066] [Bug #4998]

	* addr2line.h: ditto.

	* vm_dump.c: ditto.

Fri Jul  8 16:40:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.rl (convert_encoding): should not modify
	  the argument.

	* ext/json/parser/parser.rl (convert_encoding): no needs to use
	  force_encoding.

Fri Jul  8 15:53:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
