@@ -1,3 +1,8 @@
+Sat Jul  9 19:48:31 2011  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* internal.h: added declarations.
+	* complex.c: followed the above change.
+
 Sat Jul  9 17:24:41 2011  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* NEWS: bigdecimal is not a builtin.
